--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
   },
   "devDependencies": {
     "@echristian/eslint-config": "^0.0.16",
-    "@types/node": "^22.10.10",
-    "bumpp": "^9.10.2",
-    "eslint": "^9.18.0",
-    "lint-staged": "^15.4.2",
+    "@types/node": "^22.13.0",
+    "bumpp": "^10.0.1",
+    "eslint": "^9.19.0",
+    "lint-staged": "^15.4.3",
     "simple-git-hooks": "^2.11.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
@@ -59,5 +59,8 @@
     "vite": "^6.0.11",
     "vitest": "^3.0.4"
   },
-  "packageManager": "pnpm@10.0.0"
+  "packageManager": "pnpm@10.1.0",
+  "dependencies": {
+    "@mozilla/readability": "^0.5.0"
+  }
 }
