--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
   },
   "dependencies": {
     "@mozilla/readability": "^0.5.0",
+    "jsdom": "^26.0.0",
     "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@echristian/eslint-config": "^0.0.16",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.0",
     "bumpp": "^10.0.1",
     "eslint": "^9.19.0",
