--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@echristian/eslint-config": "^0.0.16",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.0",
+    "@types/turndown": "^5.0.5",
     "bumpp": "^10.0.1",
     "eslint": "^9.19.0",
     "lint-staged": "^15.4.3",
