--- a/package.json
+++ b/package.json
@@ -17,28 +17,13 @@
     "url": "git+https://github.com/ericc-ch/html2md.git"
   },
   "author": "Erick Christian <erickchristian48@gmail.com>",
-  "sideEffects": false,
   "type": "module",
-  "exports": {
-    ".": "./dist/index.mjs"
-  },
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.mts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
-      ]
-    }
-  },
+  "bin": {},
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
+    "build": "tsup",
     "lint": "eslint .",
     "prepare": "simple-git-hooks",
     "prepublishOnly": "pnpm run build",
@@ -67,9 +52,9 @@
     "eslint": "^9.19.0",
     "lint-staged": "^15.4.3",
     "simple-git-hooks": "^2.11.1",
+    "tsup": "^8.3.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
-    "unbuild": "^3.3.1",
     "vite": "^6.0.11",
     "vitest": "^3.0.4"
   },
