--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@mozilla/readability": "^0.5.0",
     "citty": "^0.1.6",
+    "consola": "^3.4.0",
     "jsdom": "^26.0.0",
     "playwright": "^1.50.1",
     "turndown": "^7.2.0"
