--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     }
   },
   "bin": {
-    "html2md": "./dist/cli.js"
+    "@echristian/web2md": "./dist/cli.js"
   },
   "files": [
     "dist"
