--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "consola": "^3.4.0",
     "jsdom": "^26.0.0",
     "playwright": "^1.50.1",
-    "turndown": "^7.2.0"
+    "turndown": "^7.2.0",
+    "ufo": "^1.5.4"
   },
   "devDependencies": {
     "@echristian/eslint-config": "^0.0.16",
