--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "devDependencies": {
     "@echristian/eslint-config": "^0.0.16",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.13.0",
+    "@types/node": "^22.13.1",
     "@types/turndown": "^5.0.5",
     "bumpp": "^10.0.1",
     "eslint": "^9.19.0",
@@ -70,9 +70,9 @@
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
-    "vitest": "^3.0.4"
+    "vitest": "^3.0.5"
   },
-  "packageManager": "pnpm@10.1.0+sha512.c89847b0667ddab50396bbbd008a2a43cf3b581efd59cf5d9aa8923ea1fb4b8106c041d540d08acb095037594d73ebc51e1ec89ee40c88b30b8a66c0fae0ac1b",
+  "packageManager": "pnpm@10.2.0",
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
