--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "consola": "^3.4.0",
     "defu": "^6.1.4",
     "jsdom": "^26.0.0",
+    "p-limit": "^6.2.0",
     "playwright": "^1.50.1",
     "turndown": "^7.2.0",
     "ufo": "^1.5.4"
