--- a/package.json
+++ b/package.json
@@ -60,20 +60,21 @@
     "ufo": "^1.5.4"
   },
   "devDependencies": {
-    "@echristian/eslint-config": "^0.0.16",
+    "@echristian/eslint-config": "^0.0.22",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.4",
     "@types/turndown": "^5.0.5",
-    "bumpp": "^10.0.2",
-    "eslint": "^9.19.0",
+    "bumpp": "^10.0.3",
+    "eslint": "^9.20.1",
+    "jiti": "^2.4.2",
     "lint-staged": "^15.4.3",
     "simple-git-hooks": "^2.11.1",
     "tsup": "^8.3.6",
-    "tsx": "^4.19.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
-    "vitest": "^3.0.5"
+    "vitest": "^3.0.6"
   },
-  "packageManager": "pnpm@10.2.1",
+  "packageManager": "pnpm@10.4.1",
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
